// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sideLoadViews createConfig 1`] = `
Object {
  "entry": Object {
    "views/layouts/application": Array [
      "<PROJECT_ROOT>/app/views/layouts/application.css",
      "<PROJECT_ROOT>/app/views/layouts/application.js",
    ],
    "views/layouts/no_side": Array [
      "<PROJECT_ROOT>/app/views/layouts/no_side.css",
    ],
    "views/pages/_header": Array [
      "<PROJECT_ROOT>/app/views/pages/_header.css",
      "<PROJECT_ROOT>/app/views/pages/_header.js",
    ],
    "views/pages/_post": Array [
      "<PROJECT_ROOT>/app/views/pages/_post.css",
    ],
    "views/pages/home": Array [
      "<PROJECT_ROOT>/app/views/pages/home.css",
    ],
  },
  "mode": "development",
  "output": Object {
    "path": "<PROJECT_ROOT>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
    Object {},
  ],
  "resolve": Object {
    "alias": Object {
      "assets": "<PROJECT_ROOT>/app/assets",
      "lib": "<PROJECT_ROOT>/app/lib",
    },
  },
}
`;

exports[`sideLoadViews disabled 1`] = `
Object {
  "entry": Object {},
  "mode": "development",
  "output": Object {
    "path": "<PROJECT_ROOT>/public/assets",
    "publicPath": "/assets/",
  },
  "plugins": Array [
    WebpackFixStyleOnlyEntriesPlugin {
      "apply": [Function],
      "options": Object {
        "extensions": Array [
          "less",
          "scss",
          "css",
          "sass",
          "styl",
        ],
        "ignore": undefined,
        "silent": false,
      },
    },
    Object {},
  ],
  "resolve": Object {
    "alias": Object {
      "assets": "<PROJECT_ROOT>/app/assets",
      "lib": "<PROJECT_ROOT>/app/lib",
    },
  },
}
`;
